# PyTorch-Plugin-FL

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  pyproject.toml  setup.py
csrc/: CMakeLists.txt
csrc/aten/: Common.cpp  Common.h  DispatchStub.h  FlagGemsRegistration.cpp  FlagosMinimal.cpp  Register.cpp  bmm.cc  bmm.h  common.cc  common.h  copy_ops.cc  dispatch_stub.h  dispatcher.h  mm.cc  mm.h  register.cc
csrc/aten/cuda/: mm.cc
csrc/aten/factory_ops/: contiguous_ops.cc  contiguous_ops.cpp  contiguous_ops.h  copy_ops.cc  copy_ops.cpp  copy_ops.h  empty.h  fallback.h  set_ops.h  strided_ops.h
csrc/aten/functional_ops/: add_stub.cc  all_stub.cu  bitwise_and_stub.cu  bmm.cc  bmm.cpp  bmm.h  bmm_stub.cc  bmm_stub.h  cat_stub.cc  cat_stub.cpp  cat_stub.h  embedding_stub.cc  embedding_stub.cpp  embedding_stub.h  log_softmax_stub.cc  log_softmax_stub.h  mean_stub.cc  mm.cc  mm.cpp  mm.h  mm_stub.cc  mm_stub.h  mul_stub.cc  rsqrt_stub.cc  silu_stub.cc  softmax_stub.cc  softmax_stub.h
csrc/aten/native/: mm.h  (+5 more)
csrc/runtime/: DeviceAllocator.cpp  DeviceAllocator.h  Exception.h  FlagosDeviceAllocator.cpp  FlagosDeviceAllocator.h  FlagosException.h  FlagosFunctions.cpp  FlagosFunctions.h  FlagosGenerator.cpp  FlagosGenerator.h  FlagosGuard.cpp  FlagosGuard.h  FlagosHooks.cpp  FlagosHooks.h  FlagosHostAllocator.cpp  FlagosHostAllocator.h  Functions.cpp  Functions.h  Generator.cpp  Generator.h  Guard.cpp  Guard.h  Hooks.cpp  Hooks.h  HostAllocator.cpp  HostAllocator.h  exception.h  flagos_stream_api.cc  functions.cc  functions.h  generator.cc  generator.h  hooks.h  host_allocator.cc
(+207 files in other folders)
